Closed
Bug 224197
Opened 22 years ago
Closed 22 years ago
NNTP error causes thunderbird to hang
Categories
(Thunderbird :: Mail Window Front End, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird0.4
People
(Reporter: simon.andrews, Assigned: mscott)
References
Details
Attachments
(1 file)
|
511 bytes,
patch
|
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.5) Gecko/20031007 Firebird/0.7
Build Identifier: Mozilla Thunderbird 0.3 (20031013)
Occasionally I reveive an authentication error from our news server (I don't
think this is thunderbirds fault), which produces an error box saying:
NNTP error: You have no permission to talk - goodbye.
In previous versions of thunderbird I could dismiss this box, reconnect and
everything was OK. Now the dialog box will not dismiss and thunderbird hangs
until I kill it from the task manager.
Reproducible: Always
Steps to Reproduce:
1.Read news
2.Wait for authentication error (usually occurs as soon as I start if it's going to)
3.Try to dismiss the error dialog box
Actual Results:
The error dialog box will not dismiss. The button seems to be active (appears
to depress when clicked), but stays visible and blocks access to the main window.
Expected Results:
Allowed me to close the dialog box.
Comment 1•22 years ago
|
||
*** Bug 224324 has been marked as a duplicate of this bug. ***
I can confirm this bug. For example, if I connect to an NNTP server in
Thunderbird 0.3, enter the username "guest" and password "guest", and should
server reject the password, the program will lock up.
So to reproduce this bug, just typo your password.
Comment 4•22 years ago
|
||
*** Bug 224950 has been marked as a duplicate of this bug. ***
Also applies to the NNTP error "Too many connections from realm ...." as I
described in # 224950. :)
Comment 6•22 years ago
|
||
*** Bug 225192 has been marked as a duplicate of this bug. ***
Comment 7•22 years ago
|
||
*** Bug 225473 has been marked as a duplicate of this bug. ***
| Assignee | ||
Updated•22 years ago
|
Status: NEW → ASSIGNED
Target Milestone: --- → Thunderbird0.4
Hi All,
This error happens to me on News.CIS.DFN-1.DE, which required a user name
and password. If I goof one of them, Thunderbird will tell you that
"authentication failed" and then freeze up.
--Tony
Comment 9•22 years ago
|
||
*** Bug 222496 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 10•22 years ago
|
||
If nsNNTPProtocol::NewsResponse gets a NULL string out from m_lineStreamBuffer
and we are not paused, waiting for more data, return an error. This breaks an
infinite loop where we keep coming back into NewsResponse over and over again
just read out an empty input string.
| Assignee | ||
Comment 11•22 years ago
|
||
Comment on attachment 135940 [details] [diff] [review]
the fix
this would be another good mozilla 1.6b bug.
The fix is in the current 11-19 thunderbird builds and so far it is testing out
ok.
Attachment #135940 -
Flags: superreview?(bienvenu)
Updated•22 years ago
|
Attachment #135940 -
Flags: superreview?(bienvenu) → superreview+
Comment 12•22 years ago
|
||
Comment on attachment 135940 [details] [diff] [review]
the fix
a=asa (on behalf of drivers) for checkin to 1.6 beta.
| Assignee | ||
Comment 13•22 years ago
|
||
fixed.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 14•20 years ago
|
||
Hi there, since I do´nt really know, what to do, I was sending some of the
alerts created by Thunderbird´s Bug report.
The following message, which I never had sent, since this was my old account1
year ago, came back - and did not show up in SENT-box.
Please help: What is going on with my computer?
Yours Michael
|------------------------- Failed addresses follow: ---------------------|
<feyerz@t-online.de>
unknown user / Teilnehmer existiert nicht
|----------- Message text follows: (body too large, truncated) ----------|
Received: from analuisa.com ([200.6.231.119]) by mailin20.sul.t-online.de
with smtp id 1EEvi2-28skJU0; Mon, 12 Sep 2005 23:19:26 +0200
Date: Mon, 12 Sep 2005 15:19:31 -0600
To: "Feyerz" <feyerz@t-online.de>
From: "Feyerz" <feyerz@feyerabend-verlag.de>
Subject:
Message-ID: <idhermyiocavnvsvvsa@t-online.de>
MIME-Version: 1.0
Content-Type: multipart/mixed;
boundary="--------isrmqtvnvyslkglbnpxi"
----------isrmqtvnvyslkglbnpxi
Content-Type: text/html; charset="us-ascii"
Content-Transfer-Encoding: 7b
You need to log in
before you can comment on or make changes to this bug.
Description
•