Bug #224197 --> News errors cause the app to hang in an infinite loop after showing a modal dialog If nsNNTPProtocol::NewsResponse gets a NULL string out from m_lineStreamBuffer and we are not paused, waiting for more data, return an error.

sr=bienvenu
a=asa